refactor and optimize all scripts

--- a/psql-ubuntu2204/postgres-config-files/primary_postgresql.conf
+++ b/psql-ubuntu2204/postgres-config-files/primary_postgresql.conf
@@ -1,6 +1,6 @@
-data_directory = '/var/lib/pgsql/13/data'
-hba_file = '/var/lib/pgsql/13/data/pg_hba.conf'
-ident_file = '/var/lib/pgsql/13/data/pg_ident.conf'
+data_directory = '/db/mypg13'
+hba_file = '/etc/postgresql/13/main/pg_hba.conf'
+ident_file = '/etc/postgresql/13/main/pg_ident.conf'
 
 listen_addresses = '*'
 port = 5432
@@ -18,8 +18,6 @@ synchronous_commit = local
 max_wal_senders = 3
 wal_sender_timeout = 120s
 
-#synchronous_standby_names = 'myapp'
-#synchronous_standby_names = 'slave01'
 synchronous_standby_names = '*'
 
 # LOGS
