--- a/psql-ubuntu2204/postgres-config-files/standby_postgresql.conf
+++ b/psql-ubuntu2204/postgres-config-files/standby_postgresql.conf
@@ -1,6 +1,6 @@
-data_directory = '/var/lib/pgsql/13/data'
-hba_file = '/var/lib/pgsql/13/data/pg_hba.conf'
-ident_file = '/var/lib/pgsql/13/data/pg_ident.conf'
+data_directory = '/db/mypg13'
+hba_file = '/etc/postgresql/13/main/pg_hba.conf'
+ident_file = '/etc/postgresql/13/main/pg_ident.conf'
 
 listen_addresses = '*'
 port = 5432
